Fix reader size being too small for some pictures

--- a/app/static/css/reader.css
+++ b/app/static/css/reader.css
@@ -1,3 +1,7 @@
+body.reader {
+	max-width: 100%;
+}
+
 #reader main {
 	display: flex;
 	flex-direction: row;
